--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="header">
-            <div class="logo">header logo</div>
+            <div class="logo">Header logo</div>
             <div class="links">
                 <ul>
                     <li><a href="#">header link one</a></li>
@@ -18,11 +18,15 @@
         </div>
         <div class="landing">
             <div class="landing-header">
-
+                <div class="boldheader">
+                    <p>This website is awesome</p></div>
+                <div class="subtext">
+                    <p> This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p></div>
+                <button> Sign up </button>  
             </div>
-            <div class="image">
-
-            </div>
+                <div class="image">
+                    This is a placeholder for a image
+                </div>
 
         </div>
         <div class="info">
@@ -48,6 +52,7 @@
 
         </div>
         <div class="footer">
+            The Odin Project
 
         </div>
     </body>
