created the random boxes and the quote section

--- a/index.html
+++ b/index.html
@@ -29,18 +29,37 @@
                 </div>
 
         </div>
-        <div class="info">
-            <div class="info-header">
-
+        <div class="title"> Some random information.</div>
+        <div class="info-con">
+            <div class="info">
+                <div class="empty-box"></div>
+                <div class="text">This is some subtext under an illustration or image</div>
             </div>
-            <div class="info-content">
-
+            <div class="info">
+                <div class="empty-box"></div>
+                <div class="text">This is some subtext under an illustration or image</div>
             </div>
-
+            <div class="info">   
+                <div class="empty-box"></div>
+                <div class="text">This is some subtext under an illustration or image</div>
+            </div>
+            <div class="info">
+                <div class="empty-box"></div>
+                <div class="text">This is some subtext under an illustration or image</div>
+            </div>
         </div>
         <div class="quote">
-
-
+            <div class="cool-quote">
+                <i>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know
+                is that it looks nice.
+            </i> 
+            <div>
+            </div>
+            <p>
+            </p>   
+            <div></div>
+                <strong> - Thor, God of Thunder </strong>
+            </div>
             </div>
 
         </div>
