Finally finished it but the code is absolutely horrendous. Looking forward to going back to this project in the future to improve it for sure.

--- a/index.html
+++ b/index.html
@@ -65,10 +65,13 @@
         </div>
         <div class="action">
             <div class="action-container">
-
+                <div class="action-main">
+                    <div class="action-header">Call to action! It's time!</div>
+                
+                    <div class="action-subtext">Sign up for our product by clicking that button right over there!</div>
+                </div>
+                <button> Sign up </button>
             </div>
-
-
         </div>
         <div class="footer">
             The Odin Project
