--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <p>This website is awesome</p></div>
                 <div class="subtext">
                     <p> This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p></div>
-                <button> Sign up </button>  
+                <button class="header-button"> Sign up </button>  
             </div>
                 <div class="image">
                     This is a placeholder for a image
@@ -70,7 +70,7 @@
                 
                     <div class="action-subtext">Sign up for our product by clicking that button right over there!</div>
                 </div>
-                <button> Sign up </button>
+                <button class="action-button"> Sign up </button>
             </div>
         </div>
         <div class="footer">
